--- a/css/myCss.css
+++ b/css/myCss.css
@@ -1,24 +1,54 @@
-﻿#body {
+﻿@import url('https://fonts.googleapis.com/css?family=Lobster+Two|News+Cycle|PT+Sans|Questrial|Sansita');
+
+body {
     width:100%;
     height:100%;
-    /*background-color:rgba(26,19,31,.71);*/
-    /*background-image:url(../../images/matrixblue.jpg);*/
+    /*background-color:rgba(26,19,31,.5);
+    background-image:url(../../images/matrixblue.jpg);*/
     background-image:url(../../images/bg1.jpg);
     background-position:top;
     background-repeat:no-repeat;
     background-attachment:fixed;
     background-size:cover; 
-    
 }
 
+#img_htmlcssjs{
+    min-width: 450px;
+}
 
+.img-habilidades{
+    max-width: 100px;
+    max-height: 100px;
+    width: auto;
+    height: auto;
+}
+
+.img-dbs{
+    max-width: 80px;
+    max-height: 80px;
+    width: auto;
+    height: auto;
+    margin:0 auto;
+}
+
+#img_csharp{
+    float: right;
+}
+
+.div-habilidades > .row {
+    padding-bottom: 20px;
+}
+
+#linkCurriculo{
+    float: right;
+}
 
 #imgProfile{
     max-width:300px;
     width: auto;
     height: auto;
     margin:0 auto;
-    border:4px solid #FFF;
+    border:3px solid #FFF;
     box-shadow: 0 0px 8px 0 #FFF, 0 0px 20px 0 #FFF;
     -webkit-box-shadow:  0 0px 8px 0 #FFF, 0 0px 20px 0 #FFF;
     -moz-box-shadow:  0 0px 8px 0 #FFF, 0 0px 20px 0 #FFF;
@@ -27,22 +57,65 @@
     -moz-border-radius:15px 15px 20px 20px;*/
 }
 
-.div-topo{
-    margin-top:25px;
-    padding:10px;
-          
+.size-img{
+    width: 100px;
+    height: 100px;
 }
-.div-details{
+
+.div-principal{
+    padding-top: 45px;
+}
+.div-sobre{
+    padding-bottom:20px;
+}
+.div-devforyou{
+    padding: 20px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    background-color: rgba(255, 255, 255,1);
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+}
+
+.div-habilidades{
+    padding-bottom:20px;
+    /*background-color: white;*/
+}
+
+.div-contato{
+    padding-bottom:20px;
+}
+
+footer{
+    background-color:rgba(26,19,31,.91);
+    padding-top:34px;
+    padding-bottom:20px;
+    color:#FFF;
+    position:center;
+    display:block;
     border-radius:15px 50px 30px;
     -webkit-border-radius:15px 50px 30px;
     -moz-border-radius:15px 50px 30px;
 }
+
+
+
 .name{
-    font-family: 'Indie Flower', cursive;
+    /*font-family: 'Indie Flower', cursive;*/
+    font-family: 'Questrial', sans-serif;
     font-size:60px;
     color:#FFF;
     text-align:center;
-    text-shadow:3px 3px 5px #000;
+    text-shadow:3px 3px 5px #402;
+}
+
+.profission{
+    font-family: 'Questrial', sans-serif;
+    font-size:50px;
+    color:#FFF;
+    text-align:center;
+    text-shadow:3px 3px 5px #402;
 }
 
 .email{
@@ -56,31 +129,78 @@
 .contact{
     font-family: 'Titillium Web', sans-serif;
     font-size:25px;
-    color:#000;
-    text-align:center;
-
-}
-
-.title-skills{
-    font-family: 'Indie Flower', cursive;
-    font-size:60px;
     color:#FFF;
     text-align:center;
-    text-shadow:1px 1px 4px rgb(26,19,31);
+}
+
+.titulos{
+    /*font-family: 'Indie Flower', cursive;*/
+    font-family: 'Sansita', sans-serif;
+    font-size:50px;
+    color:#FFF;
+    text-align:center;
+    /*text-shadow:1px 1px 4px rgb(26,19,31);*/
+    text-shadow:3px 3px 5px #402;
+}
+
+.titulo-hab{
+    font-family: 'Titillium Web', sans-serif;
+    font-size:35px;
+    color:#FFF;
+    text-align:center;
+    text-shadow:3px 3px 5px #000;
+}
+
+
+.subtitulo-hab{
+    font-family: 'Titillium Web', sans-serif;
+    font-size:25px;
+    color:#FFF;
+    text-align:center;
+    text-shadow:3px 3px 5px #000;
+}
+
+.text-devforyou{
+    color:#000;
+    font-family: 'News Cycle', sans-serif;
+    text-align: center;
+    font-size: 35px;    
+    text-shadow:1px 1px 2px rgba(0,0,0,0.8);
+}
+
+.text-devforyou-1{
+    color:darkslateblue;
+    font-family: 'Lobster Two', cursive;
+    text-align: center;
+    font-size: 50px;    
+    text-shadow:3px 3px 5px #FFF;
+}
+
+.text-devforyou-2{
+    color: darkcyan;
+    font-family: 'Sansita', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 50px;    
+    text-shadow:3px 3px 5px #FFF;
+}
+
+#coffe {
+    color:saddlebrown;
 }
 
 .emailspan{
     font-size:19px;
 }
 
-.container-fluid #imgBackground{
+#imgBackground{
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: auto;
-    opacity: 0.4;
 }
+
 
 ul{
     text-align:center;
@@ -92,19 +212,6 @@ ul{
 ul li{
     margin-left:10px;
     display:inline;
-}
-
-.img-sociais{
-    max-width:50px;
-    opacity:0.65;
-    
-}
-
-.img-sociais:hover{
-    opacity:1;
-    transition: all 0.5s ease 0s;
-    text-decoration:none;
-    
 }
 
 .shadow{
@@ -124,26 +231,6 @@ ul li{
     min-height:400px;
     padding-top:10px;
     padding-bottom:10px;
-    /*box-shadow: 0px 0px 8px 10px rgba(236, 215, 255,0.49), 0px 0px 20px 10px rgba(236, 215, 255,0.69);*/
-    
-    /*visibility: hidden;*/
-    }
-
-.second-fluid{
-    padding-top:20px;
-}
-
-.rodape-fluid{
-    background-color:rgba(26,19,31,.91);
-    padding-top:34px;
-    padding-bottom:20px;
-    color:#FFF;
-    position:center;
-    display:block;
-}
-
-.fluid-skills{
-    background-color:white;
 }
 
 .text-about-me{
@@ -152,43 +239,20 @@ ul li{
     text-align:justify;
     padding-left:10px;
     padding-right:10px;
-
 }
+
 .title-about-me{
     font-size:25px;
     font-family: 'Titillium Web', sans-serif;
     text-align:center;
     font-weight:bold;
-
 }
+
 .itens-skills{
-    max-width:120px;
+    max-width:100px;
     max-height:70px;
     display:inline;
     margin-left:35px;
-    margin-right:30px;
-    
-}
-.skills{
-    width:auto;
-    height:120px;
-    margin:0 auto;
+    margin-right:30px;    
 }
 
-.footer-iceman{
-    font-size:32px;
-    color:white;
-}
-
-#pabout #pcontact #pskills{    
-    visibility: hidden;
-}
-
-.container-fluid-edit{
-}
-.last-fluid p{
-    padding-top:20px;
-    color:#fff;
-}
-
-/*.second-fluid { visibility: hidden; }*/
